--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         <!-- Sección Quiénes Somos -->
         <section id="quienes-somos">
             <h2>Quiénes Somos</h2>
-            <p>En Panza Mesias & Asociados contamos con un equipo multidisciplinario de abogados con años de experiencia, especializados en derecho laboral, familiar, sucesiones, penal, administrativo, inmobiliario, jubilaciones y concursos y quiebras.</p>
-            <p>Nos destacamos por nuestra cercanía, compromiso y profesionalismo, trabajando para generar confianza y garantizar la tranquilidad de cada cliente. Respetamos la confidencialidad y la ética en cada caso, asegurando resultados que hacen la diferencia.</p>
+            <p>En Panza Mesias & Asociados creemos en construir relaciones basadas en la confianza y el compromiso. Sabemos que cada caso es único, por eso nos enfocamos en escucharte, comprender tus necesidades y acompañarte en todo momento.</p>
+            <p>Nuestro equipo de abogados combina experiencia y profesionalismo con un trato cercano y humano, asegurándonos de que te sientas apoyado durante todo el proceso. Estamos aquí para ayudarte a encontrar las mejores soluciones legales y brindarte la tranquilidad que necesitas.</p>
+            <p>En cada paso del camino, estaremos a tu lado, porque tu confianza es nuestra mayor responsabilidad.</p>
         </section>
         
         <!-- Sección Contacto -->
